# Chequer

./: .gitignore  Cargo.toml  README.md  TODO.md  architecture.mmd  chequer-report.json  demo.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md
crates/agent/: Cargo.toml
crates/agent/src/: client.rs  host.rs  lib.rs  main.rs  network.rs
crates/agent/tests/: integration_test.rs
crates/common/: Cargo.toml
crates/common/src/: protocol.rs  types.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs  visualization.rs
crates/test-game/: Cargo.toml
crates/test-game/src/: main.rs
