[workspace]
members = [
    "crates/agent",
    "crates/test-game",
    "crates/common",
    "crates/report",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Game engine
bevy = "0.14"

# Low-level socket control
socket2 = "0.5"

# Networking
tokio-tungstenite = "0.24"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
crossterm = "0.28"
unicode-width = "0.1"
