[package]
name = "chequer-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "chequer_agent"
path = "src/lib.rs"

[[bin]]
name = "chequer"
path = "src/main.rs"

[dependencies]
chequer-common = { path = "../common" }
chequer-report = { path = "../report" }

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
crossterm.workspace = true
socket2 = "0.5"
libc = "0.2"
