[package]
name = "chequer-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chequer-common = { path = "../common" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
